<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_business_rm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/curve_rect_btn_bg_enabled"
            android:text="@string/business"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_income_rm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/curve_rect_btn_bg_enabled"
            android:text="@string/income"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_others_rm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/curve_rect_btn_bg_enabled"
            android:text="@string/others"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_documents_rm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/curve_rect_btn_bg_enabled"
            android:text="@string/documents"
            android:textColor="@android:color/white" />
        <Button
            android:id="@+id/btn_loan_rm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:background="@drawable/curve_rect_btn_bg_enabled"
            android:text="@string/income"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_personal_rm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            android:background="@drawable/curve_rect_btn_bg_enabled"
            android:text="@string/others"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_kyc_rm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:background="@drawable/curve_rect_btn_bg_enabled"
            android:text="@string/documents"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>