<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    android:padding="24dp">

    <TextView
        android:id="@+id/txt_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:textSize="28sp"
        android:layout_marginTop="24dp"
        android:textColor="#00214c"
        android:letterSpacing="0.05"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/txt_app_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:textSize="14sp"
        android:textColor="#696969"
        android:letterSpacing="0.05"
        android:lineSpacingExtra="8.3sp"
        android:text="@string/smart_financial_services" />

    <EditText
        android:id="@+id/et_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter ROLE(RM/BM/BCM/ops/legal/rcu)"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_app_tagline"/>

     <Button
         android:id="@+id/btn_submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/submit"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/et_role"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_app_tagline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"
        android:indeterminate="false"
        android:max="100"
        android:progress="50"
        android:layout_alignParentBottom="true"
        android:paddingBottom="0dp"
        android:progressDrawable="@drawable/bg_splash_progress"/>

</androidx.constraintlayout.widget.ConstraintLayout>