<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_rm_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/bg_app"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/txt_upload_doc_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:fontFamily="@font/lato_regular"
            android:letterSpacing="0.05"
            android:lineSpacingExtra="6.5sp"
            android:text="@string/start_adding_the_details_of_your_125th_sale_choose_any_one_of_the_following_to_continue"
            android:textColor="#696969"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/txt_am_pan_card"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/txt_am_pan_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_white_rectangle"
            android:drawableLeft="@drawable/ic_document_attach_pending"
            android:drawablePadding="16dp"
            android:fontFamily="@font/lato_bold"
            android:letterSpacing="0.05"
            android:lineSpacingExtra="6.5sp"
            android:padding="12dp"
            android:text="@string/pan_card"
            android:textColor="#696969"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/txt_am_aadhar_card"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_upload_doc_msg"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/pan_am_accepted"
            android:layout_width="25dp"
            android:layout_height="44dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/green_tick"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/txt_am_aadhar_card"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_upload_doc_msg"
            app:layout_constraintVertical_bias="0.742"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/txt_am_aadhar_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_white_rectangle"
            android:drawableLeft="@drawable/ic_document_attach_pending"
            android:drawablePadding="16dp"
            android:fontFamily="@font/lato_bold"
            android:letterSpacing="0.05"
            android:lineSpacingExtra="6.5sp"
            android:padding="12dp"
            android:text="@string/aadhar_card"
            android:textColor="#696969"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/txt_am_voter_id"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_am_pan_card"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/aadhar_am_accepted"
            android:layout_width="25dp"
            android:layout_height="44dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/green_tick"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/txt_am_voter_id"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_am_pan_card"
            app:layout_constraintVertical_bias="0.742"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/txt_am_voter_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_white_rectangle"
            android:drawableLeft="@drawable/ic_document_attach_pending"
            android:drawablePadding="16dp"
            android:fontFamily="@font/lato_bold"
            android:letterSpacing="0.05"
            android:lineSpacingExtra="6.5sp"
            android:padding="12dp"
            android:text="@string/voter_id"
            android:textColor="#696969"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/txt_am_appl_photo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_am_aadhar_card"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/voter_am_accepted"
            android:layout_width="25dp"
            android:layout_height="44dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/green_tick"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/txt_am_appl_photo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_am_aadhar_card"
            app:layout_constraintVertical_bias="0.552"
            app:layout_constraintVertical_chainStyle="packed" />


        <TextView
            android:id="@+id/txt_am_appl_photo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_white_rectangle"
            android:drawableLeft="@drawable/ic_document_attach_pending"
            android:drawablePadding="16dp"
            android:fontFamily="@font/lato_bold"
            android:letterSpacing="0.05"
            android:lineSpacingExtra="6.5sp"
            android:padding="12dp"
            android:text="Applicant Photo"
            android:textColor="#696969"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/btn_am_next"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_am_voter_id"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed" />


        <ImageView
            android:id="@+id/aphoto_am_accepted"
            android:layout_width="25dp"
            android:layout_height="44dp"
            android:src="@drawable/green_tick"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/btn_am_next"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_am_voter_id"
            app:layout_constraintVertical_bias="0.143"
            app:layout_constraintVertical_chainStyle="packed" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:orientation="horizontal"
            android:id="@+id/ll_codeOfConduct"
            app:layout_constraintTop_toBottomOf="@+id/txt_am_appl_photo"
            android:layout_marginTop="16dp">


        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_codeOfConduct"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_codeOfConduct"
            android:text="@string/code_conduct"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/ll_codeOfConduct"
            android:layout_marginTop="8dp">


        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_terms"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_terms"
            android:text="@string/terms_agreement"
            />
        </LinearLayout>


        <Button
            android:id="@+id/btn_am_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/ic_next_disable"
            android:enabled="true"
            android:fontFamily="@font/lato_black"
            android:gravity="center"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingLeft="36dp"
            android:paddingTop="8dp"
            android:paddingRight="36dp"
            android:paddingBottom="8dp"
            android:text="@string/next"
            android:textColor="#c4c4c4"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>